--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=minipreplexity
-google.gemini.api-key=your_key
+google.gemini.api-key=
 
 # OAuth2 Google Login
-spring.security.oauth2.client.registration.google.client-id=your_client_id
-spring.security.oauth2.client.registration.google.client-secret=your_secret
+spring.security.oauth2.client.registration.google.client-id=1080978854849-cvmfb3kac80lirl3fivcvvmt9jg0icod.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.client-name=Google
 
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
@@ -15,6 +15,15 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 spring.security.oauth2.client.client-name=Google
+
+spring.datasource.url=jdbc:mysql://minipreplixity.ct288wee01ba.ap-south-1.rds.amazonaws.com:3306/miniprep
+spring.datasource.username=
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 
 
